
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static short FSE_abs(short a)
{
    return (short)(a<0 ? -a : a);
}
